--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,27 @@
 	color:#999;
 	margin:0 10px;
 }
+
+.mvc-box {
+    border: 2px solid #ccc;
+    padding: 60px 20px;
+    text-align: center;
+    font-size: 20px;
+    width: 150px;
+    margin: 0 auto;
+    border-radius: 75px;
+}
+.mvc-box a {
+    text-decoration: none !important;
+
+}
+.mvc-box:hover {
+    box-shadow: 0 0 5px #ccc;
+}
+.mvc-row {
+    margin-top: 20px;
+}
+
+.mvc-div {
+    text-align: center  ;
+}
