--- a/canjs/view/header.mustache
+++ b/canjs/view/header.mustache
@@ -3,10 +3,9 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                {{#page}}
-                <li class=" {{class}}"><a href="#">{{title}} </a></li>
-                {{/page}}
-
+                {{#nav}}
+                <li class=" {{class}}"><a href="{{href}}">{{title}} </a></li>
+                {{/nav}}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>You are logged in as {{ info.appUser}}</li>
@@ -16,10 +15,19 @@
 </nav>
 <div class="jumbotron">
     <div class="container">
+        {{#isHome}}
         <h2>{{info.appTitle}} with  {{script.title}} </h2>
         <p>
             {{info.appDesc}}
         </p>
         <p><a href="{{script.url}}" class="btn btn-primary btn-lg" role="button">Learn more about {{script.title}}</a></p>
+        {{/isHome}}
+
+        {{^isHome}}
+        <h2>{{currentPage.title}}  </h2>
+        <p>
+            {{currentPage.desc}}
+        </p>
+        {{/isHome}}
     </div>
 </div>
