--- a/canjs/view/log.mustache
+++ b/canjs/view/log.mustache
@@ -1,6 +1,6 @@
 <h4>Activity Log </h4>
 <table class="table table-condensed">
-    {{#logs}}
+    {{#each logs}}
     <tr>
         <td>
             <span class="text-muted"> {{logDate}} </span>
