Finalizing canjs, starting knockout

--- a/canjs/view/wiki.mustache
+++ b/canjs/view/wiki.mustache
@@ -20,7 +20,7 @@
         {{#editMode}} <div> <textarea class="cm-box" can-value="wiki.content">  </textarea> </div> {{/editMode}}
 
     </div>
-    <div class="panel-footer">Wiki Version: {{wiki.version}}</div>
+    <div class="panel-footer">Wiki Version: {{version}}</div>
 
 </div>
 </cm-wiki>
