finalized build, needs optimization

--- a/less/style.less
+++ b/less/style.less
@@ -43,21 +43,20 @@ tr {
   box-shadow: none;
 }
 .gridWrapper {
-  height: 500px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   border: 1px solid #ccc;
   margin-top: @large;
   padding: @medium;
+  height: 600px;
+  overflow: scroll;
 }
 
 .form-comp {
   margin: 0 @medium;
 }
-input {
-  width: 50px !important;
-}
 .highlight {
   background-color: rgba(255, 255, 0, 0.53);
 
+}
+.btn {
+  margin : @small;
 }
