--- a/less/style.css
+++ b/less/style.css
@@ -29,19 +29,18 @@ tr {
   box-shadow: none;
 }
 .gridWrapper {
-  height: 500px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   border: 1px solid #ccc;
   margin-top: 50px;
   padding: 25px;
+  height: 600px;
+  overflow: scroll;
 }
 .form-comp {
   margin: 0 25px;
 }
-input {
-  width: 50px !important;
-}
 .highlight {
   background-color: rgba(255, 255, 0, 0.53);
+}
+.btn {
+  margin: 5px;
 }
